--- a/rem.css
+++ b/rem.css
@@ -7,7 +7,7 @@
 
 /* Rem Main Picture */
 .app-2CXKsg {
-    background-image: linear-gradient(30deg, rgba(0,0,0,.4), rgba(0,0,0,.5)), url(https://images7.alphacoders.com/103/1034381.png);
+    background-image: linear-gradient(30deg, rgba(0,0,0,.4), rgba(0,0,0,.5)), url(https://github.com/Prince-Rosario/Theme/blob/main/cropped-2499-1406-733079.png);
     background-size: cover;
 }
 
