--- a/rem.css
+++ b/rem.css
@@ -7,7 +7,7 @@
 
 /* Rem Main Picture */
 .app-2CXKsg {
-    background-image: linear-gradient(30deg, rgba(0,0,0,.4), rgba(0,0,0,.5)), url(https://ibb.co/K2Zg1SY);
+    background-image: linear-gradient(30deg, rgba(0,0,0,.4), rgba(0,0,0,.5)), url(https://initiate.alphacoders.com/images/733/cropped-2499-1406-733079.png?5280);
     background-size: cover;
 }
 
