--- a/rem.css
+++ b/rem.css
@@ -13,7 +13,7 @@
 
 /* Picture for Discord/BetterDiscord settings */
 .standardSidebarView-E9Pc3j {
-    background-image: linear-gradient(30deg, rgba(0,0,0,.8), rgba(0,0,0,.5)), url(https://images8.alphacoders.com/103/1034438.png);
+    background-image: linear-gradient(30deg, rgba(0,0,0,.8), rgba(0,0,0,.5)), url(https://initiate.alphacoders.com/images/733/cropped-2499-1406-733079.png?5280);
     background-size: cover;
 }
 
